--- a/files.html
+++ b/files.html
@@ -285,13 +285,14 @@
       <p id="profileEmail">user@example.com</p>
     </div>
     <div class="menu">
-     <a href="index.html"> <button id="accessFilesBtn">Upload files</button></a>
-      <button id="favoritesBtn">Favorites</button>
+          <button id="favoritesBtn">Favorites</button>
       <button id="allFilesBtn">All Files</button>
       <ul id="favoritesList" class="favorites-list"></ul>
       <button id="deleteAllBtn">Delete All Files</button>
-      <button id="logoutBtn">Logout</button>
-      <a href="about.html"> <button>About</button></a>
+      <a href="index.html"> <button style="background-color: black; padding: 10px; border-radius: 10px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; color: #ddd;" id="accessFilesBtn">Upload files</button></a>
+
+      <button id="logoutBtn" style="background-color: rgb(215, 29, 29); padding: 10px; border-radius: 10px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; color: #ddd;">Logout</button>
+      <a href="about.html"> <button style="background-color: rgb(204, 229, 20); padding: 10px; border-radius: 10px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; color: #131111;">About</button></a>
     </div>
   </div>
   
@@ -580,5 +581,7 @@
       });
     }
   </script>
+
+<script src="https://apis.google.com/js/api.js"></script>
 </body>
 </html>
