--- a/realTime.html
+++ b/realTime.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Realtime Text Sync with Sidebar Saves</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- Google Fonts -->
+  <!-- Google Fonts (default: Montserrat) -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     /* Reset & Global Styles */
@@ -16,11 +16,12 @@
     html, body {
       height: 100%;
       font-family: 'Montserrat', sans-serif;
-      /* Default PC wallpaper */
-      background: url('https://c0.wallpaperflare.com/preview/134/372/59/abstract-background-copyspace-brainstorm.jpg') no-repeat center center fixed;
+      /* Default wallpaper for PC */
+      background: url('https://img.freepik.com/free-photo/open-laptop-mouse-with-bulldog-paper-clips-felt-tip-pens-yellow-background_23-2147880676.jpg?t=st=1738424817~exp=1738428417~hmac=24ddf8f6875ea1cdd99e5d271e8cc0902bc291546dd8453622e837a340ed98e2&w=1060') no-repeat center center fixed;
       background-size: cover;
       color: #333;
       overflow-x: hidden;
+      transition: background 0.3s ease, font-family 0.3s ease;
     }
     /* Phone wallpaper override */
     @media (max-width: 600px) {
@@ -172,21 +173,33 @@
       font-size: 0.9rem;
       color: #666;
     }
-    .sidebar .menu button {
-      width: 100%;
-      padding: 10px;
-      margin: 12px 0;
-      background: #3498db;
-      border: none;
-      border-radius: 4px;
-      font-size: 1rem;
-      font-weight: 600;
-      color: #fff;
-      transition: background 0.3s ease;
-    }
-    .sidebar .menu button:hover {
-      background: #2980b9;
-    }
+    /* Position the menu at the bottom of the sidebar */
+.sidebar .menu {
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
+
+/* Make the buttons minimalistic (no background, smaller padding, etc.) */
+.sidebar .menu button {
+  background: none;
+  border: none;
+  padding: 5px 0;
+  font-size: 0.9rem;
+  color: #333;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.sidebar .menu button:hover {
+  color: #000;
+}
+
     /* Saved Texts List in Sidebar */
     #savedTextsList {
       margin-top: 30px;
@@ -200,6 +213,29 @@
     }
     .saved-item:hover {
       background: #f0f0f0;
+    }
+    /* Customization Button (only on phone) */
+    #customBtn {
+      display: none;
+      width: 100%;
+      padding: 10px;
+      margin-top: 20px;
+      background: #9b59b6;
+      border: none;
+      border-radius: 4px;
+      font-size: 1rem;
+      font-weight: 600;
+      color: #fff;
+      transition: background 0.3s ease;
+    }
+    #customBtn:hover {
+      background: #8e44ad;
+    }
+    /* Show customization button on phone only */
+    @media (max-width: 600px) {
+      #customBtn {
+        display: block;
+      }
     }
     /* Sidebar Toggle Button */
     .sidebar-toggle {
@@ -240,7 +276,7 @@
       height: 100%;
       object-fit: cover;
     }
-    /* Modal Popup Styles */
+    /* Modal Popup Styles for Saved Text */
     .modal {
       display: none;
       position: fixed;
@@ -297,6 +333,90 @@
       border-radius: 4px;
       margin-top: 15px;
     }
+    /* Modal Popup Styles for Customization (Phone Only) */
+    .custom-modal {
+      display: none;
+      position: fixed;
+      z-index: 1300;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background: rgba(255,255,255,0.95);
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+    }
+    .custom-modal-content {
+      background: #fff;
+      margin: auto;
+      padding: 20px;
+      border-radius: 4px;
+      max-width: 800px;
+      width: 100%;
+      max-height: 90%;
+      overflow-y: auto;
+      position: relative;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    .custom-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 15px;
+    }
+    .custom-title {
+      font-size: 1.4rem;
+      font-weight: 600;
+      color: #333;
+    }
+    .custom-close-btn {
+      background: #e74c3c;
+      border: none;
+      color: #fff;
+      padding: 6px 10px;
+      font-size: 1rem;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+    .custom-section {
+      margin-bottom: 20px;
+    }
+    .custom-section label {
+      display: block;
+      margin-bottom: 8px;
+      font-weight: 600;
+      color: #333;
+    }
+    .custom-section select {
+      width: 100%;
+      padding: 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1rem;
+    }
+    .wallpaper-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
+      gap: 10px;
+      margin-top: 10px;
+    }
+    .wallpaper-item {
+      width: 100%;
+      cursor: pointer;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      overflow: hidden;
+      transition: transform 0.3s ease;
+    }
+    .wallpaper-item:hover {
+      transform: scale(1.05);
+    }
+    .wallpaper-item img {
+      width: 100%;
+      display: block;
+    }
     @media (max-width: 600px) {
       .sidebar {
         width: 260px;
@@ -309,11 +429,27 @@
         height: 240px;
       }
     }
+
+    .saved-item button {
+  background-color: #e74c3c; /* A red background */
+  border: none;
+  color: #fff;
+  padding: 5px 10px;
+  font-size: 0.9rem;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.saved-item button:hover {
+  background-color: #c0392b; /* Darker red on hover */
+}
+
   </style>
 </head>
 <body>
   <!-- Sidebar Toggle Button -->
-  <button class="sidebar-toggle" id="sidebarToggle">&#9776;</button>
+  <button class="sidebar-toggle" id="sidebarToggle">&#9776;</button> <br><br>
   
   <!-- Sidebar -->
   <div class="sidebar" id="sidebar">
@@ -324,10 +460,13 @@
     </div>
     <div class="menu">
       <button id="logoutBtn">Logout</button>
-      <a href="index.html"><button id="mainPageBtn">MAIN PAGE</button></a>
+      <a href="index.html"><button id="mainPageBtn">Main Page</button></a>
     </div>
+      
     <!-- Saved Texts List (Titles Only) -->
     <div id="savedTextsList"></div>
+    <!-- Customization Button (visible only on phone) -->
+    <button id="customBtn">Customization</button>
   </div>
   
   <!-- Authentication Container -->
@@ -344,7 +483,7 @@
   <input type="text" id="titleInput" placeholder="Enter title for saved text" disabled>
   
   <!-- Real-Time Textarea -->
-  <textarea id="textArea" placeholder="Login to start typing..." disabled></textarea>
+  <textarea id="textArea" placeholder="start typing..." disabled></textarea>
   
   <!-- Save Button -->
   <button id="saveBtn" disabled>Save Text</button>
@@ -361,6 +500,53 @@
     </div>
   </div>
   
+  <!-- Modal Popup for Customization (Phone Only) -->
+  <div id="customModal" class="custom-modal">
+    <div class="custom-modal-content">
+      <div class="custom-header">
+        <div class="custom-title">Customization</div>
+        <button class="custom-close-btn" id="closeCustomModal">Close</button>
+      </div>
+      <!-- Font Selection Section -->
+      <div class="custom-section">
+        <label for="fontSelect">Select Font</label>
+        <select id="fontSelect">
+          <option value="'Montserrat', sans-serif" selected>Montserrat</option>
+          <option value="'Lato', sans-serif">Lato</option>
+          <option value="'Roboto', sans-serif">Roboto</option>
+          <option value="'Open Sans', sans-serif">Open Sans</option>
+        </select>
+      </div>
+      <!-- Wallpaper Selection Section -->
+      <div class="custom-section">
+        <label>Choose Wallpaper</label>
+        <div class="wallpaper-grid">
+          <div class="wallpaper-item" data-wallpaper="w1.jpg">
+            <img src="w1.jpg" alt="Wallpaper 1">
+          </div>
+          <div class="wallpaper-item" data-wallpaper="w2.jpg">
+            <img src="w2.jpg" alt="Wallpaper 2">
+          </div>
+          <div class="wallpaper-item" data-wallpaper="w3.jpg">
+            <img src="w3.jpg" alt="Wallpaper 3">
+          </div>
+          <div class="wallpaper-item" data-wallpaper="w4.jpg">
+            <img src="w4.jpg" alt="Wallpaper 4">
+          </div>
+          <div class="wallpaper-item" data-wallpaper="w5.jpg">
+            <img src="w5.jpg" alt="Wallpaper 5">
+          </div>
+          <div class="wallpaper-item" data-wallpaper="w6.jpg">
+            <img src="w6.jpg" alt="Wallpaper 6">
+          </div>
+          <div class="wallpaper-item" data-wallpaper="w7.jpg">
+            <img src="w7.jpg" alt="Wallpaper 7">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
   <!-- Profile Logo at Lower Left Corner -->
   <div class="profile-logo" id="profileLogo">
     <img id="profileLogoImg" src="person.png" alt="Profile Logo">
@@ -369,7 +555,7 @@
   <!-- Firebase & App Script -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-    import { getDatabase, ref as dbRef, set, onValue, push } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
+    import { getDatabase, ref as dbRef, set, onValue, push, remove } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
     import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
   
     const firebaseConfig = {
@@ -390,6 +576,7 @@
     const emailInput = document.getElementById('email');
     const passwordInput = document.getElementById('password');
     const userStatus = document.getElementById('userStatus');
+    const authContainer = document.getElementById('authContainer');
     const authButtons = document.getElementById('authButtons');
     const titleInput = document.getElementById('titleInput');
     const textArea = document.getElementById('textArea');
@@ -403,16 +590,32 @@
     const profileLogo = document.getElementById('profileLogo');
     const profileLogoImg = document.getElementById('profileLogoImg');
     const savedTextsList = document.getElementById('savedTextsList');
+    const customBtn = document.getElementById('customBtn');
   
-    // Modal Elements
+    // Modal Elements for Saved Text
     const modal = document.getElementById('modal');
     const modalTitle = document.getElementById('modalTitle');
     const modalText = document.getElementById('modalText');
     const closeModal = document.getElementById('closeModal');
     const copyModalBtn = document.getElementById('copyModalBtn');
   
+    // Modal Elements for Customization
+    const customModal = document.getElementById('customModal');
+    const closeCustomModal = document.getElementById('closeCustomModal');
+    const fontSelect = document.getElementById('fontSelect');
+    const wallpaperItems = document.querySelectorAll('.wallpaper-item');
+  
     let currentUser = null;
     let currentModalText = "";
+  
+    // Load saved wallpaper from local storage on page load
+    window.addEventListener('load', () => {
+      const savedWallpaper = localStorage.getItem('userWallpaper');
+      if (savedWallpaper) {
+        document.body.style.background = `url('${savedWallpaper}') no-repeat center center fixed`;
+        document.body.style.backgroundSize = "cover";
+      }
+    });
   
     sidebarToggle.addEventListener('click', () => {
       sidebar.classList.toggle('open');
@@ -421,11 +624,50 @@
       sidebar.classList.toggle('open');
     });
   
+    // Show customization button only on phone
+    if (window.innerWidth <= 600) {
+      customBtn.style.display = "block";
+    }
+  
+    customBtn.addEventListener('click', () => {
+      customModal.style.display = "flex";
+    });
+  
+    closeCustomModal.addEventListener('click', () => {
+      customModal.style.display = "none";
+    });
+  
+    // Font selection event
+    fontSelect.addEventListener('change', () => {
+      document.body.style.fontFamily = fontSelect.value;
+    });
+  
+    // Wallpaper selection events with local storage persistence
+    wallpaperItems.forEach(item => {
+      item.addEventListener('click', () => {
+        const wallpaperUrl = item.getAttribute('data-wallpaper');
+        // Change wallpaper based on phone or PC
+        if (window.innerWidth <= 600) {
+          document.body.style.background = `url('${wallpaperUrl}') no-repeat center center fixed`;
+        } else {
+          // Example: For PC, you might have a default wallpaper or use the selected one.
+          document.body.style.background = `url('${wallpaperUrl}') no-repeat center center fixed`;
+        }
+        document.body.style.backgroundSize = "cover";
+        // Save the chosen wallpaper to local storage
+        localStorage.setItem('userWallpaper', wallpaperUrl);
+      });
+    });
+  
     onAuthStateChanged(auth, (user) => {
       if (user) {
         currentUser = user;
-        userStatus.textContent = `Logged in as: ${user.email}`;
-        authButtons.style.display = 'none';
+        // Hide the authentication container when logged in
+        authContainer.style.display = "none";
+  
+        // (Optional) You may also want to hide or adjust the userStatus element.
+        // userStatus.textContent = `Logged in as: ${user.email}`;
+  
         textArea.disabled = false;
         saveBtn.disabled = false;
         titleInput.disabled = false;
@@ -439,8 +681,9 @@
         setupSavedTexts(user);
       } else {
         currentUser = null;
+        // Show the authentication container when not logged in
+        authContainer.style.display = "block";
         userStatus.textContent = 'Not logged in';
-        authButtons.style.display = 'block';
         textArea.disabled = true;
         saveBtn.disabled = true;
         titleInput.disabled = true;
@@ -513,13 +756,32 @@
           savesArray.forEach(([key, save]) => {
             const item = document.createElement('div');
             item.className = 'saved-item';
-            item.textContent = save.title;
+            item.style.cursor = "pointer";
+  
+            // Create a container for title and delete button
+            const titleDiv = document.createElement('span');
+            titleDiv.textContent = save.title;
+  
+            const deleteBtn = document.createElement('button');
+            deleteBtn.textContent = "Delete";
+            deleteBtn.style.marginLeft = "10px";
+            deleteBtn.addEventListener('click', (e) => {
+              e.stopPropagation(); // Prevent opening the modal when deleting
+              const saveRef = dbRef(database, `users/${user.uid}/saves/${key}`);
+              remove(saveRef)
+                .catch((error) => alert("Delete error: " + error.message));
+            });
+  
+            // Clicking the main item (excluding the delete button) opens the modal
             item.addEventListener('click', () => {
               modalTitle.textContent = save.title;
               modalText.textContent = save.text;
               currentModalText = save.text;
               modal.style.display = "flex";
             });
+  
+            item.appendChild(titleDiv);
+            item.appendChild(deleteBtn);
             savedTextsList.appendChild(item);
           });
         }
@@ -539,6 +801,9 @@
     window.addEventListener('click', (event) => {
       if (event.target === modal) {
         modal.style.display = "none";
+      }
+      if (event.target === customModal) {
+        customModal.style.display = "none";
       }
     });
   </script>
