--- a/index.html
+++ b/index.html
@@ -182,9 +182,7 @@
     <div class="modal-content custom-modal-content">
       <h3>Customize Wallpaper</h3>
       <div class="wallpaper-grid">
-        <div class="wallpaper-item" data-wallpaper="w1.jpg">
-          <img src="w1.jpg" alt="Wallpaper 1">
-        </div>
+        
         <div class="wallpaper-item" data-wallpaper="w2.jpg">
           <img src="w2.jpg" alt="Wallpaper 2">
         </div>
@@ -205,7 +203,7 @@
     </div>
   </div>
   
-  <!-- Main Content --> <br><br><br> <br><br><br><br>
+  <!-- Main Content --> <br><br><br> <br><br><br><br><br><br><br><br><br><br><br><br><br>
   <div class="container">
     <h1>File Manager</h1>
     <div class="drop-zone" id="dropZone">
