--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="icon" href="logo.ico" type="image/x-icon">
-  <title>File Manager</title>
+  <title>Vault-Z</title>
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <!-- Google Font -->
@@ -224,8 +224,10 @@
   </div>
   
   <!-- Main Content -->
+   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+   
   <div class="container">
-    <h1>File Manager</h1>
+    <h1>Vault-Z</h1>
     <div class="drop-zone" id="dropZone">
       Drag and drop files here or click to upload
     </div>
